✄ fix https://github.com/otale/tale/issues/79

--- a/blade-core/pom.xml
+++ b/blade-core/pom.xml
@@ -45,6 +45,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.bladejava</groupId>
+			<artifactId>blade-embed-jetty</artifactId>
+			<version>0.1.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	
 </project>
