🦄 fix banner start text and remove auth/websocket project

--- a/blade-core/pom.xml
+++ b/blade-core/pom.xml
@@ -52,5 +52,17 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
+
+	<build>
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<filtering>false</filtering>
+				<includes>
+					<include>**/*.flf</include>
+				</includes>
+			</resource>
+		</resources>
+	</build>
+
 </project>
