--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 		<blade-kit.version>1.4.1-beta</blade-kit.version>
 		<blade-aop.version>1.0.0</blade-aop.version>
 		<blade-embed-jetty.version>0.1.3</blade-embed-jetty.version>
+		<blade-jdbc.version>0.1.7</blade-jdbc.version>
 		<jetty.version>9.4.0.v20161208</jetty.version>
 	</properties>
 
