--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 		<slf4j-api.version>1.7.21</slf4j-api.version>
 		<slf4j-log4j12.version>1.7.21</slf4j-log4j12.version>
 		<blade-core.version>1.7.2</blade-core.version>
-		<blade-kit.version>1.4.1-beta</blade-kit.version>
+		<blade-kit.version>1.4.2</blade-kit.version>
 		<blade-aop.version>1.0.1</blade-aop.version>
 		<blade-embed-jetty.version>0.1.3</blade-embed-jetty.version>
 		<blade-jdbc.version>0.1.7</blade-jdbc.version>
